[package]
name = "tdigest-rs"
repository = "https://github.com/zeus-fyi/t-digest"
version = "0.2.4"
license = "Apache-2.0"
description = "T-Digest algorithm in Rust"
authors = ["Paul Meng <me@paulme.ng>", "Alex George <alex@zeus.fyi>"]
readme = "README.md"
keywords = ["tdigest", "percentile", "statistics"]
edition = "2021"
exclude = ["/benches/**", "/.travis.yml"]

[badges]
travis-ci = { repository = "zeus-fyi/t-digest" }
codecov = { repository = "zeus-fyi/t-digest" }

[dependencies]
ordered-float = "2.0"
serde = { package = "serde", version = "1.0", optional = true, default-features = false }

[features]
use_serde = ["serde", "serde/derive", "ordered-float/serde"]
